force-app/main/default/objects/Credit_Note__c/fields/Returns__c.field-meta.xml
<CustomField>
    <fullName>Returns__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returns</label>
    <referenceTo>Returns__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>