force-app/main/default/objects/Credit_Note__c/fields/Total_amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_Incl_Tax__c</fullName>
    <formula>CGST__c + SGST__c + Total_Credit_amount__c +  IGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount(Incl Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>