force-app/main/default/objects/Credit_Note__c/fields/Total_Credit_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_amount__c</fullName>
    <label>Total Credit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>