force-app/main/default/objects/Credit_Note__c/fields/Total_Returns_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Returns_Qty__c</fullName>
    <label>Total Returns quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>